# RLost-cities

./: .gitignore  .pre-commit-config.yaml  README.md  package.json
backend/: main.py  pyproject.toml  shared_types.py
backend/domains/game/: logic.py  models.py  routes.py  service.py
backend/tests/: conftest.py  test_e2e_api.py  test_service.py
ml-training/: pyproject.toml
shared/: package.json
shared/types/: index.ts
